force-app/main/default/objects/NPN_Contract_Packet_Config__c/NPN_Contract_Packet_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NPN Contracts Packet Config</label>
</CustomObject>