force-app/main/default/objects/NPN_Contract_Packet_Config__c/fields/VP_Email__c.field-meta.xml
<CustomField>
    <fullName>VP_Email__c</fullName>
    <label>VP Email</label>
    <type>Email</type>
</CustomField>