force-app/main/default/objects/NPN_Contract_Packet_Config__c/fields/VP_First_Name__c.field-meta.xml
<CustomField>
    <fullName>VP_First_Name__c</fullName>
    <label>VP First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>